@@ -14,7 +14,7 @@ surfacesincludedir = $(pkgincludedir)/surfaces
 
 noinst_LTLIBRARIES = libsurfaces.la
 
-libsurfaces_la_SOURCES = crushandcut.cpp filters.cpp flavours.cpp links.cpp ndisc.cpp nnormalsurface.cpp nnormalsurfacelist.cpp nprism.cpp nsanstandard.cpp nsquad.cpp nsstandard.cpp nsurfacefilter.cpp nsurfaceset.cpp nsurfacesubset.cpp nxmlfilterreader.cpp nxmlfilterreaders.cpp nxmlsurfacereader.cpp orientable.cpp sfcombination.cpp sfproperties.cpp
+libsurfaces_la_SOURCES = crushandcut.cpp filters.cpp flavours.cpp links.cpp ndisc.cpp nnormalsurface.cpp nnormalsurfacelist.cpp nprism.cpp nsanstandard.cpp nsquad.cpp nsstandard.cpp nsurfacefilter.cpp nsurfaceset.cpp nsurfacesubset.cpp nxmlfilterreader.cpp nxmlfilterreaders.cpp nxmlsurfacereader.cpp orientable.cpp sfcombination.cpp sfproperties.cpp spheres.cpp
 
 surfacesinclude_HEADERS = filterregistry.h flavourregistry.h ndisc.h nnormalsurface.h nnormalsurfacelist.h nnormalsurfacelist.tcc nprism.h nsanstandard.h nsanstandard.tcc nsmirrored.h nsquad.h nsquad.tcc nsstandard.h nsstandard.tcc nsurfacefilter.h nsurfaceset.h nsurfacesubset.h nxmlfilterreader.h nxmlsurfacereader.h sfcombination.h sfproperties.h
 
